<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TestProtoiio</string>
   
   <string name="string_box1151">Start the tour</string> 
   <string name="string_box1156">Dont have an account?</string> 
   <string name="string_box1157">Sign up</string> 
   <string name="string_box1158">Sign In</string> 
   <string name="string_box1167">Sign In</string> 
   <string name="string_box1191">Already have an account?</string> 
   <string name="string_box1192">Sign In</string> 
   <string name="string_box1175">Sign Up</string> 
   <string name="string_box1190">Sign Up</string> 
   <string name="string_box1194">Continue</string> 
   <string name="string_box1213">Peach</string> 
   <string name="string_box1214">smoothie</string> 
   <string name="string_box1362">SEE DETAILS</string> 
   <string name="string_box1236">Green</string> 
   <string name="string_box1237">smoothie</string> 
   <string name="string_box1360">SEE DETAILS</string> 
   <string name="string_box1241">Red Fruit</string> 
   <string name="string_box1242">smoothie</string> 
   <string name="string_box1359">SEE DETAILS</string> 
   <string name="string_box1210">Smoothies</string> 
   <string name="string_box1065">julier@example.com</string> 
   <string name="string_box1064">Julie Richards</string> 
   <string name="string_box1063">MJ</string> 
   <string name="string_box1374">ver. 1.00.2016.07.12</string> 
   <string name="string_box1269">Order Ingredients</string> 
   <string name="string_box1256">Smoothie</string> 
   <string name="string_box1255">Red Fruit</string> 
   <string name="string_box1274">PREPARING INGREDIENTS</string> 
   <string name="string_boxyx61p">PREPARING INGREDIENTS</string> 
   <string name="string_box1285">My orders</string> 
   <string name="string_box1nwnf">julier@example.com</string> 
   <string name="string_boxs81hm">Julie Richards</string> 
   <string name="string_boxlbnt9">MJ</string> 
   <string name="string_boxdf45f">ver. 1.00.2016.07.12</string> 
   <string name="string_box1306">I have read and accept the Terms of Serviceand Privacy Policy</string> 
   <string name="string_box1310">Confirm Order</string> 
   <string name="string_box1295"></string> 
   <string name="string_box1358">50 USD</string> 
   <string name="string_box1357">TOTAL: </string> 
   <string name="string_box1348">Long glass and straw</string> 
   <string name="string_box1346">Mint leaves</string> 
   <string name="string_box1345">1/2 cup coconut milk</string> 
   <string name="string_box1343">1/4 cup blueberries</string> 
   <string name="string_box1342">2 large strawberries</string> 
   <string name="string_box1341">1/2 banana</string> 
   <string name="string_box1344">Order items:</string> 
   <string name="string_box1375">Red Fruit x 20 servings</string> 
   <string name="string_box1376">Smoothie:</string> 
   <string name="string_box1339">Place Order</string> 
   <string name="string_box1338">50 USD</string> 
   <string name="string_box1337">TOTAL: </string> 
   <string name="string_box1328">Long glass and straw</string> 
   <string name="string_box1327">Drinkware:</string> 
   <string name="string_box1326">Mint leaves</string> 
   <string name="string_box1325">1/2 cup coconut milk</string> 
   <string name="string_box1324">Garnish: </string> 
   <string name="string_box1323">1/4 cup blueberries</string> 
   <string name="string_box1322">2 large strawberries</string> 
   <string name="string_box1321">1/2 banana</string> 
   <string name="string_box1372">SERVINGS</string> 
   <string name="string_box1208">Discover thousands of tasty smoothies for any drink enthusiast.</string> 
   <string name="string_box1205">Discover smoothies</string> 
   <string name="string_box1259">Choose your favorite smoothie and see full details on the recipe and preparation.</string> 
   <string name="string_box1258">Choose recipe</string> 
   <string name="string_box1262">Order all your favorite smoothie ingredients in one click. Next day delivery guaranteed.</string> 
   <string name="string_box1261">Next day delivery</string> 
   <string name="string_box1388">1/2 large banana</string> 
   <string name="string_box1396">2 large fresh strawberries</string> 
   <string name="string_box1397">1/4 cup blueberries</string> 
   <string name="string_box1398">1/2 cup coconut milk</string> 
   <string name="string_box1399">Served: poured over ice </string> 
   <string name="string_box1400">Standard garnish: sliced strawberries, mint leaves</string> 
   <string name="string_box1401">Drinkware: long glass, straw</string> 
   <string name="string_box1266">Place the banana, strawberries, blueberries and coconut milk with lots of ice in a blender. Blend until smooth. Add some ice cubes, straw and garnish with strawberries and mint leaves. Ready to serve! Enjoy.  </string>
</resources>