<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/constraintlayout00">
    <android.view.View
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:id="@+id/box1387"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal012">
    </android.view.View>
    <android.view.View
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:id="@+id/box1389"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal012"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal025">
    </android.view.View>
    <android.view.View
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:id="@+id/box1390"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal025"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal037">
    </android.view.View>
    <android.view.View
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:id="@+id/box1391"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal037"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal050">
    </android.view.View>
    <android.view.View
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:id="@+id/box1392"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal050"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal062">
    </android.view.View>
    <android.view.View
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:id="@+id/box1393"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal062"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal075">
    </android.view.View>
    <android.view.View
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:id="@+id/box1394"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal075"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal087">
    </android.view.View>
    <android.widget.TextView
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:text="@string/string_box1388"
        android:textColor="#78909c"
        android:textSize="13sp"
        android:id="@+id/box1388"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVertical003"
        app:layout_constraintRight_toRightOf="@id/guidelineVertical097"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal001"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal011">
    </android.widget.TextView>
    <android.widget.TextView
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:text="@string/string_box1396"
        android:textColor="#78909c"
        android:textSize="13sp"
        android:id="@+id/box1396"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVertical003"
        app:layout_constraintRight_toRightOf="@id/guidelineVertical097"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal013"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal024">
    </android.widget.TextView>
    <android.widget.TextView
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:text="@string/string_box1397"
        android:textColor="#78909c"
        android:textSize="13sp"
        android:id="@+id/box1397"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVertical003"
        app:layout_constraintRight_toRightOf="@id/guidelineVertical097"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal026"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal036">
    </android.widget.TextView>
    <android.widget.TextView
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:text="@string/string_box1398"
        android:textColor="#78909c"
        android:textSize="13sp"
        android:id="@+id/box1398"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVertical003"
        app:layout_constraintRight_toRightOf="@id/guidelineVertical097"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal038"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal048">
    </android.widget.TextView>
    <android.widget.TextView
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:text="@string/string_box1399"
        android:textColor="#78909c"
        android:textSize="13sp"
        android:id="@+id/box1399"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVertical003"
        app:layout_constraintRight_toRightOf="@id/guidelineVertical097"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal051"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal061">
    </android.widget.TextView>
    <android.widget.TextView
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:text="@string/string_box1400"
        android:textColor="#78909c"
        android:textSize="13sp"
        android:id="@+id/box1400"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVertical003"
        app:layout_constraintRight_toRightOf="@id/guidelineVertical097"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal063"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal073">
    </android.widget.TextView>
    <android.widget.TextView
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:text="@string/string_box1401"
        android:textColor="#78909c"
        android:textSize="13sp"
        android:id="@+id/box1401"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVertical003"
        app:layout_constraintRight_toRightOf="@id/guidelineVertical097"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal076"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal086">
    </android.widget.TextView>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal012"
        app:layout_constraintGuide_percent="0.12">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal025"
        app:layout_constraintGuide_percent="0.25">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal037"
        app:layout_constraintGuide_percent="0.37">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal050"
        app:layout_constraintGuide_percent="0.50">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal062"
        app:layout_constraintGuide_percent="0.62">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal075"
        app:layout_constraintGuide_percent="0.75">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal087"
        app:layout_constraintGuide_percent="0.87">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/guidelineVertical097"
        app:layout_constraintGuide_percent="0.97">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/guidelineVertical003"
        app:layout_constraintGuide_percent="0.03">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal011"
        app:layout_constraintGuide_percent="0.11">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal001"
        app:layout_constraintGuide_percent="0.01">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal024"
        app:layout_constraintGuide_percent="0.24">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal013"
        app:layout_constraintGuide_percent="0.13">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal036"
        app:layout_constraintGuide_percent="0.36">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal026"
        app:layout_constraintGuide_percent="0.26">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal048"
        app:layout_constraintGuide_percent="0.48">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal038"
        app:layout_constraintGuide_percent="0.38">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal061"
        app:layout_constraintGuide_percent="0.61">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal051"
        app:layout_constraintGuide_percent="0.51">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal073"
        app:layout_constraintGuide_percent="0.73">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal063"
        app:layout_constraintGuide_percent="0.63">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal086"
        app:layout_constraintGuide_percent="0.86">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal076"
        app:layout_constraintGuide_percent="0.76">
    </androidx.constraintlayout.widget.Guideline>
</androidx.constraintlayout.widget.ConstraintLayout>