<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/constraintlayout00">
    <android.view.View
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:background="#ffffff"
        android:id="@+id/box1048"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guidelineVertical080"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </android.view.View>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:background="#ffffff"
        android:id="@+id/box1049"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guidelineVertical080"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal027"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal049">
    </androidx.recyclerview.widget.RecyclerView>
    <android.view.View
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:id="@+id/box1211"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVertical004"
        app:layout_constraintRight_toRightOf="@id/guidelineVertical076"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal025"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal026">
    </android.view.View>
    <android.widget.TextView
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:text="@string/string_box1065"
        android:textColor="#78909c"
        android:textSize="14sp"
        android:id="@+id/box1065"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVertical019"
        app:layout_constraintRight_toRightOf="@id/guidelineVertical061"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal020"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal023">
    </android.widget.TextView>
    <android.widget.TextView
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:text="@string/string_box1064"
        android:textColor="#4dd0e1"
        android:textSize="20sp"
        android:id="@+id/box1064"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVertical015"
        app:layout_constraintRight_toRightOf="@id/guidelineVertical065"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal016"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal020">
    </android.widget.TextView>
    <android.view.View
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:background="@drawable/circle"
        android:id="@+id/box1062"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVertical031"
        app:layout_constraintRight_toRightOf="@id/guidelineVertical049"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal004"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal014">
    </android.view.View>
    <android.widget.TextView
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:text="@string/string_box1063"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:id="@+id/box1063"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVertical034"
        app:layout_constraintRight_toRightOf="@id/guidelineVertical046"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal007"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal012">
    </android.widget.TextView>
    <android.widget.TextView
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:text="@string/string_box1374"
        android:textColor="#78909c"
        android:textSize="9sp"
        android:id="@+id/box1374"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVertical029"
        app:layout_constraintRight_toRightOf="@id/guidelineVertical050"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal093"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal095">
    </android.widget.TextView>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/guidelineVertical080"
        app:layout_constraintGuide_percent="0.80">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal049"
        app:layout_constraintGuide_percent="0.49">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal027"
        app:layout_constraintGuide_percent="0.27">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/guidelineVertical076"
        app:layout_constraintGuide_percent="0.76">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/guidelineVertical004"
        app:layout_constraintGuide_percent="0.04">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal026"
        app:layout_constraintGuide_percent="0.26">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal025"
        app:layout_constraintGuide_percent="0.25">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/guidelineVertical061"
        app:layout_constraintGuide_percent="0.61">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/guidelineVertical019"
        app:layout_constraintGuide_percent="0.19">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal023"
        app:layout_constraintGuide_percent="0.23">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal020"
        app:layout_constraintGuide_percent="0.20">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/guidelineVertical065"
        app:layout_constraintGuide_percent="0.65">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/guidelineVertical015"
        app:layout_constraintGuide_percent="0.15">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal016"
        app:layout_constraintGuide_percent="0.16">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/guidelineVertical049"
        app:layout_constraintGuide_percent="0.49">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/guidelineVertical031"
        app:layout_constraintGuide_percent="0.31">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal014"
        app:layout_constraintGuide_percent="0.14">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal004"
        app:layout_constraintGuide_percent="0.04">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/guidelineVertical046"
        app:layout_constraintGuide_percent="0.46">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/guidelineVertical034"
        app:layout_constraintGuide_percent="0.34">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal012"
        app:layout_constraintGuide_percent="0.12">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal007"
        app:layout_constraintGuide_percent="0.07">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/guidelineVertical050"
        app:layout_constraintGuide_percent="0.50">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/guidelineVertical029"
        app:layout_constraintGuide_percent="0.29">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal095"
        app:layout_constraintGuide_percent="0.95">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guidelineHorizontal093"
        app:layout_constraintGuide_percent="0.93">
    </androidx.constraintlayout.widget.Guideline>
</androidx.constraintlayout.widget.ConstraintLayout>